feat: first version of scope generator
